<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_marginTop="120dp"
        android:text="@string/let_s_set_up_your_profile"
        android:textColor="@android:color/black"
        android:layout_marginStart="40dp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/description_profile_setup"
        android:layout_marginTop="4dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/next_btn_txt"
        android:textStyle="bold"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/mybutton"
        android:textColor="@android:color/white"
        />

</LinearLayout>