<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <androidx.cardview.widget.CardView
        android:id="@+id/top_navigat"
        android:layout_width="411dp"
        android:layout_height="128dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-25dp"
        android:background="@drawable/top_navigat">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">
            <ImageView
                android:id="@+id/vector"
                android:layout_width="11.67dp"
                android:layout_height="19.8dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:src="@drawable/vectorbacknew"
                />
            <TextView
                android:id="@+id/order_place"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30.49dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:text="@string/order_succe"
                android:textAppearance="@style/order_succe"
                android:textStyle="bold"
                android:gravity="top"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:id="@+id/line_29"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:background="@drawable/line_29"
        />
    <TextView
        android:id="@+id/some_id"
        android:layout_width="74dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="31/02/2020"
        android:textAppearance="@style/some"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/order_01"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="308dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="@string/order_01"
        android:textAppearance="@style/order_01"
        android:gravity="right|center_vertical"
    />
    <View

        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:background="@drawable/line_29"
        />
    <TextView
        android:id="@+id/item_name"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:text="@string/item_name"
        android:textAppearance="@style/item_name"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/quantity"
        android:layout_width="97dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="165dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:text="@string/quantity"
        android:textAppearance="@style/quantity"
        android:gravity="center_horizontal|center_vertical"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="55dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="310dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="154dp"
        android:text="@string/price"
        android:textAppearance="@style/price"
        android:gravity="right|center_vertical"
        />
    <View
        android:id="@+id/line_8"
        android:layout_width="339dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="297dp"
        android:background="@drawable/line_8"
        />
    <TextView
        android:id="@+id/amount"
        android:layout_width="293dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="303dp"
        android:text="@string/amount"
        android:textAppearance="@style/amount"
        android:gravity="center_vertical"
        />
    <TextView

        android:layout_width="115dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="250dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="303dp"
        android:text="@string/some_id"
        android:textAppearance="@style/amounttotal"
        android:gravity="right|center_vertical"
        />
    <View
        android:id="@+id/line_9"
        android:layout_width="339dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="342dp"
        android:background="@drawable/line_8"
        />
    <TextView
        android:id="@+id/payment_met"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="345dp"
        android:text="@string/payment_met"
        android:textAppearance="@style/payment_met"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/opened_a_ta"
        android:layout_width="116dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="177dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="345dp"
        android:text="@string/opened_a_ta"
        android:textAppearance="@style/opened_a_ta"
        android:gravity="center_vertical"
        />
    <TextView
        android:id="@+id/amount_due_"
        android:layout_width="88dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="377dp"
        android:text="@string/amount_due_"
        android:textAppearance="@style/amount_due_"
        android:gravity="center_vertical"
        />
    <TextView

        android:layout_width="116dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="144dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="377dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_"
        android:gravity="center_vertical"
        />
    <TextView
    android:id="@+id/clear_dues_"
    android:layout_width="116dp"
    android:layout_height="32dp"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="211dp"
    android:layout_alignParentTop="true"
    android:layout_marginTop="377dp"
    android:text="@string/clear_dues_"
    android:textAppearance="@style/clear_dues_"
    android:gravity="center_vertical"
    />
    <TextView
        android:id="@+id/congratulat"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="447dp"
        android:text="@string/congratulate"
        android:textAppearance="@style/congratulate"
        android:gravity="center_vertical"
        />
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="309dp"
        android:layout_height="60.8dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="716dp"
        android:background="@drawable/rectangle_3orange"
        />
    <TextView
        android:id="@+id/back_to_men"
        android:layout_width="163dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="128dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="732dp"
        android:text="@string/back_to_men"
        android:gravity="top"
        />
</RelativeLayout>