<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="109dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="112dp"
        android:background="@drawable/rectanglech_3"
        />
    <TextView
        android:id="@+id/add_new_add"
        android:layout_width="177dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="124dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:text="@string/add_new_add"
        android:textAppearance="@style/add_new_add"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/default_add"
        android:layout_width="132dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="162dp"
        android:text="@string/default_add"
        android:textAppearance="@style/default_add"
        android:gravity="top"
        />
    <View
        android:id="@+id/line_30"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:background="@drawable/line_30"
        />
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="11dp"
        android:layout_height="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:background="@drawable/rectanglecheck_1"
        />
    <TextView
        android:id="@+id/antony"
        android:layout_width="49dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="79dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:text="@string/antony"
        android:textAppearance="@style/antony"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/xyz_apartme"
        android:layout_width="275dp"
        android:layout_height="84dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="212dp"
        android:text="@string/xyz_apartme"
        android:textAppearance="@style/xyz_apartme"
        android:gravity="top"
        />
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="345dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:background="@drawable/rectanglead2"
        />
    <TextView
        android:id="@+id/home"
        android:layout_width="32dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="349dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="195dp"
        android:text="@string/home"
        android:textAppearance="@style/home"
        android:gravity="top"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="79dp"
        android:layout_alignParentTop="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="252dp"
        android:text="Mobile: "
        android:textAppearance="@style/mobile_123_"
        android:gravity="top"
        />
        <TextView
            android:id="@+id/mobile_123_"
            android:layout_width="154dp"
            android:layout_height="18dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="252dp"
            android:text="+123-456-789"
            android:textAppearance="@style/mobile_123_"
            android:gravity="top"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/remove"
        android:layout_width="48dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="296dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="264dp"
        android:text="@string/remove"
        android:textAppearance="@style/remove"
        android:gravity="top"
        />
    <View
        android:id="@+id/line_33"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="350dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="276dp"
        android:background="@drawable/line_33"
        />
    <TextView
        android:id="@+id/edit"
        android:layout_width="25dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="356dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="264dp"
        android:text="@string/edit"
        android:textAppearance="@style/edit"
        android:gravity="top"
        />
    <TextView
        android:id="@+id/other_addre"
        android:layout_width="136dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="292dp"
        android:text="@string/other_addre"
        android:textAppearance="@style/other_addre"
        android:gravity="top"
        />
    <View
        android:id="@+id/line_31"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="310dp"
        android:background="@drawable/line_30"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerotheraddress"
        android:layout_marginTop="320dp">

    </androidx.recyclerview.widget.RecyclerView>
    <androidx.cardview.widget.CardView
        android:layout_width="412dp"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangleas_1"
        android:elevation="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/confirm_add"
                android:layout_width="145dp"
                android:layout_height="19dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="9.5dp"
                android:text="@string/confirm_add"

                android:gravity="top"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="194dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rectangle_3orange"
                    />
                <TextView
                    android:id="@+id/confirm_ord"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="22dp"
                    android:layout_marginLeft="4dp"
                    android:text="Walk in customer"
                    android:textAllCaps="true"

                    android:gravity="top"
                    />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>