<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_vertical"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setup.signup.SignUpCustomer2">
    <ImageView
        android:layout_width="220dp"
        android:src="@drawable/app_icon"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="220dp"/>



    <EditText
        android:id="@+id/cust_otp_login"
        android:layout_width="280dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/senttophonenumber"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:buttonTint="@android:color/holo_orange_dark"
        android:text="@string/terms_and_conditions_checkbox" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/signup_btn_txt"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/mybutton"
        android:textColor="@android:color/white"
        />


</LinearLayout>